adding prelim scaffold for targets support

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
       <sources></sources>
     </div>
     <div class="container-column">
-      Targets
+      <targets></targets>
     </div>
   </div>
 </div>
