add delete all targets button

--- a/src/app/targets/targets.component.html
+++ b/src/app/targets/targets.component.html
@@ -25,6 +25,11 @@
       </mat-card-header>
     </mat-card>
   </div>
+  <div>
+    <button mat-mini-fab color="accent" aria-label="" (click)="clearAllTargets()">
+      <mat-icon>delete_forever</mat-icon>
+    </button>
+  </div>
 </div>
 
 
