--- a/src/app/sources/sources.component.html
+++ b/src/app/sources/sources.component.html
@@ -14,6 +14,11 @@
       </mat-card-header>
     </mat-card>
   </div>
+  <div>
+    <button mat-mini-fab color="accent" aria-label="" (click)="clearAllSources()">
+      <mat-icon>delete_forever</mat-icon>
+    </button>
+  </div>
 </div>
 
 
